# gtfs

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  flake.nix  import.sql  recipe.json
SEQ_GTFS/: feed_info.txt
migrations/: 20250618211715_schema.sql
seq_gtfs/: calendar.txt  calendar_dates.txt  routes.txt
src/: main.rs  vars.rs
src/bridge/: mod.rs  static_bridge.rs
src/db/: mod.rs  queries.rs  tests.rs  types.rs
src/gtfs/: mod.rs  static_gtfs.rs
